# tinypod

./: .envrc  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yaml
.github/workflows/: argo_handson.yaml
src/: dependency.rs  lib.rs  main.rs  server.rs
tests/: server.rs
