[package]
name = "tinypod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.3", features = ["http1", "http2", "json", "tower-log"] }
anyhow = "*"
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros", "net", "signal","sync", "test-util"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["time", "local-time", "env-filter"] }
tower = { version = "0.4.10"}
tower-http = { version = "0.1", features = ["trace"] }

[dev-dependencies]
reqwest = "*"
